--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,19 @@ on:
   pull_request:
     branches: [ main ]
 
+# For release builds
+  workflow_call:
+    inputs:
+      buildFlags:
+        required: false
+        type: string
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   buildLinux:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -29,6 +34,15 @@ jobs:
       - uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
+      - name: Restore Previous Cache
+        id: cache-build-linux-restore
+        uses: actions/cache/restore@main
+        with:
+            path: |
+              .haxelib/
+              export/release/linux/haxe/
+              export/release/linux/obj/
+            key: cache-linux-build
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -52,8 +66,42 @@ jobs:
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: |
-          haxelib fixrepo
           haxelib run lime build linux -D ${{ inputs.buildFlags }}
+      - name: Clear Previous Cache
+        uses: actions/github-script@main
+        with:
+          script: |
+            try {
+            	const caches = await github.rest.actions.getActionsCacheList({
+            		owner: context.repo.owner,
+            		repo: context.repo.repo,
+            	})
+            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
+            		for (const cache of caches.data.actions_caches) {
+            			if (cache.key == "cache-linux-build") {
+            				console.log('Clearing ' + cache.key + '...')
+            				await github.rest.actions.deleteActionsCacheById({
+            					owner: context.repo.owner,
+            					repo: context.repo.repo,
+            					cache_id: cache.id,
+            				})
+            				console.log("Previous Cache Cleared!")
+            			}
+            		}
+            	}
+            } catch (error) {
+            	console.log(error.message);
+            }
+
+      - name: Save Current Cache
+        id: cache-build-linux-save
+        uses: actions/cache/save@main
+        with:
+          path: |
+            .haxelib/
+            export/release/linux/haxe/
+            export/release/linux/obj/
+          key: cache-linux-build     
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
@@ -71,6 +119,15 @@ jobs:
       - uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
+      - name: Restore Previous Cache
+        id: cache-build-windows-restore
+        uses: actions/cache/restore@main
+        with:
+            path: |
+              .haxelib/
+              export/release/windows/haxe/
+              export/release/windows/obj/
+            key: cache-windows-build
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -82,7 +139,7 @@ jobs:
         run: |
          cd C:/haxelib/hxcpp/git/tools/run
          haxe compile.hxml
-         cd ...
+         cd ..
          cd ./hxcpp
          haxe compile.hxml
          cd ../..
@@ -93,6 +150,41 @@ jobs:
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build windows -D ${{ inputs.buildFlags }}
+      - name: Clear Previous Cache
+        uses: actions/github-script@main
+        with:
+          script: |
+            try {
+            	const caches = await github.rest.actions.getActionsCacheList({
+            		owner: context.repo.owner,
+            		repo: context.repo.repo,
+            	})
+            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
+            		for (const cache of caches.data.actions_caches) {
+            			if (cache.key == "cache-windows-build") {
+            				console.log('Clearing ' + cache.key + '...')
+            				await github.rest.actions.deleteActionsCacheById({
+            					owner: context.repo.owner,
+            					repo: context.repo.repo,
+            					cache_id: cache.id,
+            				})
+            				console.log("Previous Cache Cleared!")
+            			}
+            		}
+            	}
+            } catch (error) {
+            	console.log(error.message);
+            }
+
+      - name: Save Current Cache
+        id: cache-build-windows-save
+        uses: actions/cache/save@main
+        with:
+          path: |
+            .haxelib/
+            export/release/windows/haxe/
+            export/release/windows/obj/
+          key: cache-windows-build
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
@@ -107,6 +199,15 @@ jobs:
       - uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
+      - name: Restore Previous Cache
+        id: cache-build-macos-restore
+        uses: actions/cache/restore@main
+        with:
+            path: |
+              .haxelib/
+              export/release/macos/haxe/
+              export/release/macos/obj/
+            key: cache-macos-build
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -114,12 +215,55 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           chmod +x ./projFiles/setup/unix.sh
           sh ./projFiles/setup/unix.sh
+      - name: Compile hxcpp
+        run: |
+            cd ~/haxelib/hxcpp/git/tools/run
+            haxe compile.hxml
+            cd ..
+            cd ./hxcpp
+            haxe compile.hxml
+            cd ../..
       - name: Skip SScript setup mode
         run: echo 'oy9:showMacroty8:loopCosti25y10:includeAllfg' >> ~/settings.cocoa
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build mac -D ${{ inputs.buildFlags }}
+      - name: Clear Previous Cache
+        uses: actions/github-script@main
+        with:
+          script: |
+            try {
+            	const caches = await github.rest.actions.getActionsCacheList({
+            		owner: context.repo.owner,
+            		repo: context.repo.repo,
+            	})
+            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
+            		for (const cache of caches.data.actions_caches) {
+            			if (cache.key == "cache-macos-build") {
+            				console.log('Clearing ' + cache.key + '...')
+            				await github.rest.actions.deleteActionsCacheById({
+            					owner: context.repo.owner,
+            					repo: context.repo.repo,
+            					cache_id: cache.id,
+            				})
+            				console.log("Previous Cache Cleared!")
+            			}
+            		}
+            	}
+            } catch (error) {
+            	console.log(error.message);
+            }
+
+      - name: Save Current Cache
+        id: cache-build-macos-save
+        uses: actions/cache/save@main
+        with:
+          path: |
+            .haxelib/
+            export/release/macos/haxe/
+            export/release/macos/obj/
+          key: cache-macos-build
       - name: Publish Artifact
         uses: actions/upload-artifact@main
         with:
