--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,38 +11,24 @@ on:
   pull_request:
     branches: [ main ]
 
-# For release builds
-  workflow_call:
-    inputs:
-      buildFlags:
-        required: false
-        type: string
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   buildLinux:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v4.1.7
 
       - uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
-      - name: Restore Previous Cache
-        id: cache-build-linux-restore
-        uses: actions/cache/restore@main
-        with:
-            path: |
-              .haxelib/
-              export/release/linux/haxe/
-              export/release/linux/obj/
-            key: cache-linux-build
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -52,82 +38,27 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           chmod +x ./projFiles/setup/unix.sh
           sh ./projFiles/setup/unix.sh
-      - name: Compile hxcpp
-        run: |
-          cd ~/haxelib/hxcpp/git/tools/run
-          haxe compile.hxml
-          cd ..
-          cd ./hxcpp
-          haxe compile.hxml
-          cd ../..
       - name: Skip SScript setup mode
         run: echo 'oy9:showMacroty8:loopCosti25y10:includeAllfg' >> ~/settings.cocoa
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: |
-          haxelib run lime build linux -D ${{ inputs.buildFlags }}
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-linux-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message);
-            }
-
-      - name: Save Current Cache
-        id: cache-build-linux-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            .haxelib/
-            export/release/linux/haxe/
-            export/release/linux/obj/
-          key: cache-linux-build     
+        run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}" -D officialBuild
       - name: Publish Artifact
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v4.3.4
         with:
           name: linuxBuild
           path: 'export/release/linux/bin'
-
-
   buildWindows:
     runs-on: windows-latest
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@main
+      - uses: actions/checkout@v4.1.7
 
       - uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
-      - name: Restore Previous Cache
-        id: cache-build-windows-restore
-        uses: actions/cache/restore@main
-        with:
-            path: |
-              .haxelib/
-              export/release/windows/haxe/
-              export/release/windows/obj/
-            key: cache-windows-build
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -135,79 +66,28 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           .\"projFiles\setup/windows.bat"
         shell: cmd
-      - name: Compile hxcpp
-        run: |
-         cd C:/haxelib/hxcpp/git/tools/run
-         haxe compile.hxml
-         cd ..
-         cd ./hxcpp
-         haxe compile.hxml
-         cd ../..
       - name: Skip SScript setup mode
         run: echo 'oy9:showMacroty8:loopCosti25y10:includeAllfg' >> %USERPROFILE%/settings.cocoa
         shell: cmd
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build windows -D ${{ inputs.buildFlags }}
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-windows-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message);
-            }
-
-      - name: Save Current Cache
-        id: cache-build-windows-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            .haxelib/
-            export/release/windows/haxe/
-            export/release/windows/obj/
-          key: cache-windows-build
+        run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"  -D officialBuild
       - name: Publish Artifact
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v4.3.4
         with:
           name: windowsBuild
           path: export/release/windows/bin
   buildMac:
-    runs-on: macos-latest
+    runs-on: macos-12
 
     steps:
-      - uses: actions/checkout@main
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4.1.7
 
       - uses: krdlab/setup-haxe@master
         with:
           haxe-version: 4.2.5
-      - name: Restore Previous Cache
-        id: cache-build-macos-restore
-        uses: actions/cache/restore@main
-        with:
-            path: |
-              .haxelib/
-              export/release/macos/haxe/
-              export/release/macos/obj/
-            key: cache-macos-build
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
@@ -215,57 +95,14 @@ jobs:
           haxelib install hxcpp > /dev/null --quiet
           chmod +x ./projFiles/setup/unix.sh
           sh ./projFiles/setup/unix.sh
-      - name: Compile hxcpp
-        run: |
-            cd ~/haxelib/hxcpp/git/tools/run
-            haxe compile.hxml
-            cd ..
-            cd ./hxcpp
-            haxe compile.hxml
-            cd ../..
       - name: Skip SScript setup mode
         run: echo 'oy9:showMacroty8:loopCosti25y10:includeAllfg' >> ~/settings.cocoa
       - name: Create Version Tag
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
-        run: haxelib run lime build mac -D ${{ inputs.buildFlags }}
-      - name: Clear Previous Cache
-        uses: actions/github-script@main
-        with:
-          script: |
-            try {
-            	const caches = await github.rest.actions.getActionsCacheList({
-            		owner: context.repo.owner,
-            		repo: context.repo.repo,
-            	})
-            	if (typeof caches.data.actions_caches != null && caches.data.actions_caches.length > 0) {
-            		for (const cache of caches.data.actions_caches) {
-            			if (cache.key == "cache-macos-build") {
-            				console.log('Clearing ' + cache.key + '...')
-            				await github.rest.actions.deleteActionsCacheById({
-            					owner: context.repo.owner,
-            					repo: context.repo.repo,
-            					cache_id: cache.id,
-            				})
-            				console.log("Previous Cache Cleared!")
-            			}
-            		}
-            	}
-            } catch (error) {
-            	console.log(error.message);
-            }
-
-      - name: Save Current Cache
-        id: cache-build-macos-save
-        uses: actions/cache/save@main
-        with:
-          path: |
-            .haxelib/
-            export/release/macos/haxe/
-            export/release/macos/obj/
-          key: cache-macos-build
+        run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"  -D officialBuild
       - name: Publish Artifact
-        uses: actions/upload-artifact@main
+        uses: actions/upload-artifact@v4.3.4
         with:
           name: macBuild
           path: export/release/macos/bin
