--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,8 @@ jobs:
           haxelib install tjson 1.4.0 --quiet
           haxelib install UnRAR --quiet
           haxelib install markdown --quiet
-            haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
+          haxelib install away3d --quiet
+          haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
           haxelib install hxvlc 1.8.2 --quiet --skip-dependencies
           haxelib git flxanimate https://github.com/Dot-Stuff/flxanimate 768740a56b26aa0c072720e0d1236b94afe68e3e --quiet
           haxelib git linc_luajit https://github.com/superpowers04/linc_luajit 1906c4a96f6bb6df66562b3f24c62f4c5bba14a7 --quiet
@@ -126,6 +127,7 @@ jobs:
           haxelib install tjson 1.4.0 --quiet
           haxelib install UnRAR --quiet
           haxelib install markdown --quiet
+          haxelib install away3d --quiet
           haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
           haxelib install hxvlc 1.8.2 --quiet --skip-dependencies
           haxelib git flxanimate https://github.com/Dot-Stuff/flxanimate 768740a56b26aa0c072720e0d1236b94afe68e3e --quiet
@@ -216,6 +218,7 @@ jobs:
           haxelib install tjson 1.4.0 --quiet
           haxelib install UnRAR --quiet
           haxelib install markdown --quiet
+          haxelib install away3d --quiet
           haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
           haxelib install hxvlc 1.8.2 --quiet --skip-dependencies
           haxelib git flxanimate https://github.com/Dot-Stuff/flxanimate 768740a56b26aa0c072720e0d1236b94afe68e3e --quiet
@@ -321,6 +324,7 @@ jobs:
           haxelib install flixel-tools 1.5.1 --quiet
           haxelib install hscript-iris 1.1.0
           haxelib install tjson 1.4.0 --quiet
+          haxelib install away3d --quiet
           haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
           haxelib install hxvlc 1.8.2 --quiet --skip-dependencies
           haxelib git flxanimate https://github.com/Dot-Stuff/flxanimate 768740a56b26aa0c072720e0d1236b94afe68e3e --quiet
@@ -417,6 +421,7 @@ jobs:
             haxelib install flixel-tools 1.5.1 --quiet
             haxelib install hscript-iris 1.1.0 
             haxelib install tjson 1.4.0 --quiet
+            haxelib install away3d --quiet
             haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
             haxelib install hxvlc 1.8.2 --quiet --skip-dependencies
             haxelib git flxanimate https://github.com/Dot-Stuff/flxanimate 768740a56b26aa0c072720e0d1236b94afe68e3e --quiet
