--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -325,6 +325,8 @@ jobs:
           haxelib install hscript-iris 1.1.0
           haxelib install tjson 1.4.0 --quiet
           haxelib install away3d --quiet
+          haxelib install UnRAR --quiet
+          haxelib install markdown --quiet
           haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
           haxelib install hxvlc 1.8.2 --quiet --skip-dependencies
           haxelib git flxanimate https://github.com/Dot-Stuff/flxanimate 768740a56b26aa0c072720e0d1236b94afe68e3e --quiet
@@ -422,6 +424,8 @@ jobs:
             haxelib install hscript-iris 1.1.0 
             haxelib install tjson 1.4.0 --quiet
             haxelib install away3d --quiet
+            haxelib install UnRAR --quiet
+            haxelib install markdown --quiet
             haxelib install hxdiscord_rpc 1.2.4 --quiet --skip-dependencies
             haxelib install hxvlc 1.8.2 --quiet --skip-dependencies
             haxelib git flxanimate https://github.com/Dot-Stuff/flxanimate 768740a56b26aa0c072720e0d1236b94afe68e3e --quiet
