--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -318,11 +318,11 @@ jobs:
         run: |
           haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp --quiet
           haxelib install lime 8.1.2 --quiet
-          haxelib install openfl 5.6.1 --quiet
-          haxelib install flixel --quiet
+          haxelib install openfl 9.3.4 --quiet
+          haxelib install flixel 5.6.1 --quiet
           haxelib install flixel-addons 3.2.2 --quiet
           haxelib install flixel-tools 1.5.1 --quiet
-          haxelib install hscript-iris 1.1.0
+          haxelib install hscript-iris 1.1.0 --quiet
           haxelib install tjson 1.4.0 --quiet
           haxelib install away3d --quiet
           haxelib install UnRAR --quiet
@@ -416,7 +416,7 @@ jobs:
            run: |
             haxelib setup ~/haxelib
             haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp --quiet
-            haxelib git lime https://github.com/mcagabe19-stuff/lime --quiet
+            haxelib git lime 8.1.2 --quiet
             haxelib install openfl 9.3.4 --quiet
             haxelib install flixel 5.6.1 --quiet
             haxelib install flixel-addons 3.2.2 --quiet
