--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -416,7 +416,7 @@ jobs:
            run: |
             haxelib setup ~/haxelib
             haxelib git hxcpp https://github.com/mcagabe19-stuff/hxcpp --quiet
-            haxelib git lime 8.1.2 --quiet
+            haxelib install lime 8.1.2 --quiet
             haxelib install openfl 9.3.4 --quiet
             haxelib install flixel 5.6.1 --quiet
             haxelib install flixel-addons 3.2.2 --quiet
